commented out hooks

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,8 +70,8 @@ plugins:
       minify_html: true
 
 # Hooks
-hooks:
-  - material/.overrides/hooks/translations.py
+#hooks:
+#  - material/.overrides/hooks/translations.py
 
 # Customization
 extra:
