--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ edit_uri: "https://github.com/tailored-apps/SharedComponents/edit/master/docs"
 
 # Configuration
 docs_dir: "docs"
+extra_css:
+  - stylesheets/extra.css
 # Configuration
 theme:
   name: material
