--- a/src/TailoredApps.Shared.DateTime/TailoredApps.Shared.DateTime.csproj
+++ b/src/TailoredApps.Shared.DateTime/TailoredApps.Shared.DateTime.csproj
@@ -7,6 +7,7 @@
 		<RootNamespace>TailoredApps.Shared.DateTime</RootNamespace>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Version>0.0.1</Version>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 </Project>
