--- a/src/TailoredApps.Shared.EntityFramework.UnitOfWork.WebApiCore/TailoredApps.Shared.EntityFramework.UnitOfWork.WebApiCore.csproj
+++ b/src/TailoredApps.Shared.EntityFramework.UnitOfWork.WebApiCore/TailoredApps.Shared.EntityFramework.UnitOfWork.WebApiCore.csproj
@@ -4,6 +4,7 @@
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
 		<TargetFramework>net7.0</TargetFramework>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
