--- a/src/TailoredApps.Shared.ExceptionHandling/TailoredApps.Shared.ExceptionHandling.csproj
+++ b/src/TailoredApps.Shared.ExceptionHandling/TailoredApps.Shared.ExceptionHandling.csproj
@@ -6,6 +6,7 @@
       <AssemblyName>TailoredApps.Shared.ExceptionHandling</AssemblyName>
       <RootNamespace>TailoredApps.Shared.ExceptionHandling</RootNamespace>
       <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
