--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: dotnet tool install xmldocmd -g 
       - name: generate docs
         working-directory: src/TailoredApps.Shared.DateTime/bin/Debug/netstandard2.0
-        run: xmldocmd ./TailoredApps.Shared.DateTime.dll ../../../../docs/Libraries/
+        run: xmldocmd ./TailoredApps.Shared.DateTime.dll ../../../../../docs/Libraries/
       - run: pip install mkdocs-material 
       - name: Publish
         run: mkdocs gh-deploy --force
