--- a/src/TailoredApps.Shared.EntityFramework/TailoredApps.Shared.EntityFramework.csproj
+++ b/src/TailoredApps.Shared.EntityFramework/TailoredApps.Shared.EntityFramework.csproj
@@ -8,9 +8,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.4" />
-		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.*" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.*" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.*" />
 	</ItemGroup>
 
 	<ItemGroup>
