--- a/src/TailoredApps.Shared.MediatR.ImageClassification/TailoredApps.Shared.MediatR.ImageClassification.csproj
+++ b/src/TailoredApps.Shared.MediatR.ImageClassification/TailoredApps.Shared.MediatR.ImageClassification.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="Microsoft.ML.AutoML" Version="0.20.1" />
     <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="2.0.1" />
     <PackageReference Include="Microsoft.ML.Vision" Version="2.0.1" />
-      <PackageReference Include="FluentValidation" Version="11.5.1" />
+      <PackageReference Include="FluentValidation" Version="11.*" />
   </ItemGroup>
 
   <ItemGroup>
