--- a/src/TailoredApps.Shared.MediatR.PagedRequest/TailoredApps.Shared.MediatR.PagedRequest.csproj
+++ b/src/TailoredApps.Shared.MediatR.PagedRequest/TailoredApps.Shared.MediatR.PagedRequest.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MediatR" Version="12.0.1" />
+		<PackageReference Include="MediatR" Version="12.*" />
 	</ItemGroup>
 
 	<ItemGroup>
