--- a/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
+++ b/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
@@ -10,15 +10,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="FluentValidation" Version="11.5.1" />
-		<PackageReference Include="MediatR" Version="12.0.1" />
-		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
+		<PackageReference Include="FluentValidation" Version="11.*" />
+		<PackageReference Include="MediatR" Version="12.*" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.*" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.*" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="7.*" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="Polly" Version="7.2.3" />
-		<PackageReference Include="Scrutor" Version="4.2.1" />
+		<PackageReference Include="Polly" Version="8.0.0" />
+		<PackageReference Include="Scrutor" Version="4.2.2" />
 	</ItemGroup>
 
 	<ItemGroup>
