--- a/src/TailoredApps.Shared.Payments.Provider.CashBill/TailoredApps.Shared.Payments.Provider.CashBill.csproj
+++ b/src/TailoredApps.Shared.Payments.Provider.CashBill/TailoredApps.Shared.Payments.Provider.CashBill.csproj
@@ -7,11 +7,11 @@
 	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.*" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.*" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="7.*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.*" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.*" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\TailoredApps.Shared.Payments\TailoredApps.Shared.Payments.csproj" />
