--- a/src/TailoredApps.Shared.Email/TailoredApps.Shared.Email.csproj
+++ b/src/TailoredApps.Shared.Email/TailoredApps.Shared.Email.csproj
@@ -7,6 +7,11 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.*" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\TailoredApps.Shared.Email.Models\TailoredApps.Shared.Email.Models.csproj" />
 	</ItemGroup>
 </Project>
