--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -29,4 +29,9 @@ jobs:
         run: dotnet build TailoredApps.Shared.sln --configuration Release --no-restore 
 
       - name: Testing
-        run: dotnet test --no-build --configuration Release --no-restore --verbosity normal
+        run: dotnet test --no-build --configuration Release --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat="opencover"
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
