--- a/src/TailoredApps.Shared.EntityFramework.Testing/TailoredApps.Shared.EntityFramework.Testing.csproj
+++ b/src/TailoredApps.Shared.EntityFramework.Testing/TailoredApps.Shared.EntityFramework.Testing.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.20.69" />
+	  <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
