--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Restore Workloads
         run: dotnet workload restore
       - name: Test
-        run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat="opencover"
+        run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
           
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
