--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet build TailoredApps.Shared.sln --configuration Release --no-restore 
 
       - name: Testing
-        run: dotnet test --no-build --configuration Release --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
+        run: dotnet test --no-build --configuration Release --no-restore --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat="opencover"
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
