--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
       run: dotnet nuget push TailoredApps.Shared.*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
       continue-on-error: true
     - name: Dotnet Nuget Push   
-      working-directory: src/TailoredApps.Shared.MediatR.ImageClassification/bin/Release
+      working-directory: src/TailoredApps.Shared.MediatR.ML/bin/Release
       run: dotnet nuget push TailoredApps.Shared.*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
       continue-on-error: true
     - name: Dotnet Nuget Push   
