--- a/src/TailoredApps.Shared.Email.Office365/TailoredApps.Shared.Email.Office365.csproj
+++ b/src/TailoredApps.Shared.Email.Office365/TailoredApps.Shared.Email.Office365.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-
+		<TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
 		<AssemblyName>TailoredApps.Shared.Email.Office365</AssemblyName>
 		<RootNamespace>TailoredApps.Shared.Email.Office365</RootNamespace>
