--- a/src/TailoredApps.Shared.EntityFramework/TailoredApps.Shared.EntityFramework.csproj
+++ b/src/TailoredApps.Shared.EntityFramework/TailoredApps.Shared.EntityFramework.csproj
@@ -2,14 +2,27 @@
 
 	<PropertyGroup>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
+
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
+
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
+
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
+
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'" />
+		
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.*" />
 	</ItemGroup>
 
