--- a/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
+++ b/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
 		<AssemblyName>TailoredApps.Shared.MediatR</AssemblyName>
 		<RootNamespace>TailoredApps.Shared.MediatR</RootNamespace>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -12,13 +12,34 @@
 	<ItemGroup>
 		<PackageReference Include="FluentValidation" Version="11.*" />
 		<PackageReference Include="MediatR" Version="12.*" />
-		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Polly" Version="8.2.0" />
 		<PackageReference Include="Scrutor" Version="4.2.2" />
+		
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
 	</ItemGroup>
 
 	<ItemGroup>
