--- a/src/TailoredApps.Shared.Payments.Provider.CashBill/TailoredApps.Shared.Payments.Provider.CashBill.csproj
+++ b/src/TailoredApps.Shared.Payments.Provider.CashBill/TailoredApps.Shared.Payments.Provider.CashBill.csproj
@@ -2,16 +2,40 @@
 
   <PropertyGroup>
 	  <SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-    <TargetFramework>net8.0</TargetFramework>
+	  <TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\TailoredApps.Shared.Payments\TailoredApps.Shared.Payments.csproj" />
