--- a/src/TailoredApps.Shared.Payments/TailoredApps.Shared.Payments.csproj
+++ b/src/TailoredApps.Shared.Payments/TailoredApps.Shared.Payments.csproj
@@ -2,12 +2,24 @@
 
 	<PropertyGroup>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Primitives" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Primitives" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Primitives" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Primitives" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Primitives" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
+		<PackageReference Include="Microsoft.Extensions.Primitives" Version="3.1.*"  Condition="'$(TargetFramework)' == 'net3.1'"/>
 	</ItemGroup>
 </Project>
