--- a/tests/TailoredApps.Shared.Email.Tests/TailoredApps.Shared.Email.Tests.csproj
+++ b/tests/TailoredApps.Shared.Email.Tests/TailoredApps.Shared.Email.Tests.csproj
@@ -1,36 +1,49 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+	<PropertyGroup>
+		<TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
-    <PackageReference Include="xunit" Version="2.*" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.*">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-	  <PackageReference Include="coverlet.msbuild" Version="6.0.0">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  </PackageReference>
-  </ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\TailoredApps.Shared.Email.Office365\TailoredApps.Shared.Email.Office365.csproj" />
-    <ProjectReference Include="..\..\src\TailoredApps.Shared.Email\TailoredApps.Shared.Email.csproj" />
-  </ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
+		
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
 
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
+		<PackageReference Include="xunit" Version="2.*" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.*">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="coverlet.msbuild" Version="6.*">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\TailoredApps.Shared.Email.Office365\TailoredApps.Shared.Email.Office365.csproj" />
+		<ProjectReference Include="..\..\src\TailoredApps.Shared.Email\TailoredApps.Shared.Email.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
