--- a/tests/TailoredApps.Shared.MediatR.ML.Tests/TailoredApps.Shared.MediatR.ML.Tests.csproj
+++ b/tests/TailoredApps.Shared.MediatR.ML.Tests/TailoredApps.Shared.MediatR.ML.Tests.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
 		<PackageReference Include="xunit" Version="2.*" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.*">
@@ -22,9 +22,8 @@
 		</PackageReference>
 	</ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\..\src\TailoredApps.Shared.Payments.Provider.CashBill\TailoredApps.Shared.Payments.Provider.CashBill.csproj" />
-		<ProjectReference Include="..\..\src\TailoredApps.Shared.Payments\TailoredApps.Shared.Payments.csproj" />
+	<ItemGroup>	  <ProjectReference Include="..\..\src\TailoredApps.Shared.MediatR.ML\TailoredApps.Shared.MediatR.ML.csproj" />
+		
 	</ItemGroup>
 
 	<ItemGroup>
