--- a/src/TailoredApps.Shared.Email/TailoredApps.Shared.Email.csproj
+++ b/src/TailoredApps.Shared.Email/TailoredApps.Shared.Email.csproj
@@ -2,28 +2,43 @@
 
 	<PropertyGroup>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-		<TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+
+
+		<Authors>Lukasz Kowalski</Authors>
+		<Company>Tailored Apps.</Company>
+		<Product>Shared.Email</Product>
+		<Description>Shared.Email is a simple abstraction for Email for .NET</Description>
+		<Copyright>Copyright © Lukasz Kowalski</Copyright>
+		<Summary>Shared.Email is a simple abstraction for Email for .NET</Summary>
+		<NeutralLanguage>en-US</NeutralLanguage>
+		<Title>Shared.Email</Title>
+		<PackageId>TailoredApps.Shared.Email</PackageId>
+		<PackageTags>Mediator support for .NET</PackageTags>
+		<PackageProjectUrl>https://shared.tailoredapps.pl</PackageProjectUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
 		
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
 		
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
 	
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
 
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'" />
 	</ItemGroup>
