--- a/src/TailoredApps.Shared.MediatR.Email/TailoredApps.Shared.MediatR.Email.csproj
+++ b/src/TailoredApps.Shared.MediatR.Email/TailoredApps.Shared.MediatR.Email.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-		<TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MediatR" Version="12.*" />
+		<PackageReference Include="MediatR" Version="13.*" />
 	</ItemGroup>
 
 	<ItemGroup>
