--- a/src/TailoredApps.Shared.ExceptionHandling/TailoredApps.Shared.ExceptionHandling.csproj
+++ b/src/TailoredApps.Shared.ExceptionHandling/TailoredApps.Shared.ExceptionHandling.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 	  <SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-	  <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
+	  <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
       <AssemblyName>TailoredApps.Shared.ExceptionHandling</AssemblyName>
       <RootNamespace>TailoredApps.Shared.ExceptionHandling</RootNamespace>
       <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -12,6 +12,6 @@
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="FluentValidation" Version="11.*" />
+      <PackageReference Include="FluentValidation" Version="12.*" />
     </ItemGroup>
 </Project>
