--- a/src/TailoredApps.Shared.MediatR.ML/TailoredApps.Shared.MediatR.ML.csproj
+++ b/src/TailoredApps.Shared.MediatR.ML/TailoredApps.Shared.MediatR.ML.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-		<TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
@@ -17,11 +17,42 @@
 		<PackageReference Include="Microsoft.ML.ImageAnalytics" Version="2.0.1" />
 		<PackageReference Include="Microsoft.ML.Vision" Version="2.0.1" />
 		<PackageReference Include="Microsoft.ML.AutoML" Version="0.20.1" />
-		<PackageReference Include="FluentValidation" Version="11.*" />
+		<PackageReference Include="FluentValidation" Version="12.*" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\TailoredApps.Shared.MediatR\TailoredApps.Shared.MediatR.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="6.*" Condition="'$(TargetFramework)' == 'net6.0'" />
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="5.*" Condition="'$(TargetFramework)' == 'net5.0'" />
+
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="3.1.*" Condition="'$(TargetFramework)' == 'net3.1'" />
+	</ItemGroup>
 </Project>
