--- a/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
+++ b/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-		<TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<AssemblyName>TailoredApps.Shared.MediatR</AssemblyName>
 		<RootNamespace>TailoredApps.Shared.MediatR</RootNamespace>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -25,17 +25,21 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="FluentValidation" Version="11.*" />
-		<PackageReference Include="MediatR" Version="12.*" />
+		<PackageReference Include="FluentValidation" Version="12.*" />
+		<PackageReference Include="MediatR" Version="13.*" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.*" />
 		<PackageReference Include="Polly" Version="8.*" />
-		<PackageReference Include="Scrutor" Version="5.0.2" />
+		<PackageReference Include="Scrutor" Version="6.1.0" />
 
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
-		
+
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
